# BASE_FRAMEWORK

./: .gitignore  LICENSE  README.md  app.py  create_base.py  pyproject.toml  setup.py  test.py  test_debug.py  test_order.py
base/: __init__.py  base.py  cli.py  connections.py  exceptions.py  fields.py  migrations.py  models.py  query.py  utils.py
examples/: blog_example.py  todo_example.py
tests/: test_models.py
